flicker fix test

--- a/www/css/v2.css
+++ b/www/css/v2.css
@@ -371,8 +371,9 @@ strong, b {
 	left: 0;
 	margin-bottom: 1px;
 	line-height: 40px;
-	perspective: 1000px;
-	-webkit-perspective: 1000px;
+	perspective: 1000;
+	-webkit-perspective: 1000;
+	-webkit-backface-visibility: hidden;
 }
 .word-entry-inner {
 	width: 92%;
